overflow fix?

--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,10 @@ button {
 }
 
 @media only screen and (max-width: 700px) {
+    #wrapper{
+        overflow-x: hidden;
+    }
+    
     #container {
         display: inline-block;
     }
